packages/yew-macro/tests/html_macro/generic-component-fail.stderr
error: this opening tag has no corresponding closing tag
  --> tests/html_macro/generic-component-fail.rs:46:13
   |
46 |     html! { <Generic<String>> };
   |             ^^^^^^^^^^^^^^^^^

error: mismatched closing tags: expected `Generic<String>`, found `Generic`
  --> tests/html_macro/generic-component-fail.rs:47:14
   |
47 |     html! { <Generic<String>></Generic> };
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^

error: mismatched closing tags: expected `Generic<String>`, found `Generic<Vec<String>>`
  --> tests/html_macro/generic-component-fail.rs:48:14
   |
48 |     html! { <Generic<String>></Generic<Vec<String>>> };
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: mismatched closing tags: expected `Generic<String>`, found `Generic<Path>`
  --> tests/html_macro/generic-component-fail.rs:50:14
   |
50 |     html! { <Generic<String>></Generic<Path>> };
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected a valid closing tag for component
       note: found opening tag `<Generic<String>>`
       help: try `</Generic<String>>`
  --> tests/html_macro/generic-component-fail.rs:51:30
   |
51 |     html! { <Generic<String>></> };
   |                              ^^^
